# ns-security

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  nfpm.yaml  pyproject.toml
.github/workflows/: release.yml  security.yml
docs/: waf-setup-guide.md
insight/: apacheApiUsage.json  api.json  modEvasive.json  modsecurityWaf.json  sshLogin.json
rules/crs/: crs-setup-netsapiens.conf
rules/netsapiens/: netsapiens-exclusions.conf
scripts/: install.sh
src/nssec/: __init__.py
src/nssec/cli/: __init__.py  audit.py  main.py  mtls_commands.py  waf_commands.py
src/nssec/core/: __init__.py  cache.py  checklist.py  checks.py  config.py  server_types.py  ssh.py  validators.py
src/nssec/modules/: __init__.py
src/nssec/modules/firewall/: __init__.py
src/nssec/modules/mtls/: __init__.py  config.py  utils.py
src/nssec/modules/waf/: __init__.py  config.py  restrict.py  status.py  types.py  utils.py
tests/: conftest.py
tests/unit/: test_apache_header_checks.py  test_cli_sudo_hint.py  test_mtls_commands.py  test_mtls_module.py  test_placeholder.py  test_protected_route_checks.py  test_waf_commands.py  test_waf_exclusions_order.py  test_waf_module.py  test_waf_restrict.py  test_waf_restrict_commands.py  test_waf_status.py  test_waf_utils.py
