[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nssec"
version = "0.1.0"
description = "Open-source NetSapiens security platform - audit tools and hardening automation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Sumner Robinson" }
]
keywords = ["netsapiens", "security", "voip", "sip", "audit", "hardening"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
nssec = "nssec.cli.main:cli"

[project.urls]
Homepage = "https://github.com/sumnerrobinson/ns-security"
Documentation = "https://github.com/sumnerrobinson/ns-security#readme"
Issues = "https://github.com/sumnerrobinson/ns-security/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nssec"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/rules",
    "/dashboards",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/nssec/modules/waf/config.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=nssec"
